# oko

./: pyproject.toml
oko/: cli.py  main.py  ui.py
oko/commands/: collection_cmd.py
oko/service/: service_collection.py
oko/ui/: prints.py
