[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oko"
version = "0.1.0"
description = "CLI for API endpoint testing"
readme = "README.md"
authors = [
    {name = "Edward Ojeda"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
oko = "oko.cli:app"

