[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oko-cli"
version = "0.1.0"
description = "OKO CLI: herramienta para probar endpoints de API"
authors = [
  { name = "Edward Ojeda" }
]
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13.0"
]

[project.scripts]
oko = "oko.main:app"

[tool.setuptools.packages.find]
include = ["oko*"]
